log
Fri Mar 11 17:58:51 HSP 2022: 
 tests:  0|7
total_score: 0/70
211d1af
Sat Mar 12 11:50:42 HSP 2022: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|6
total_score: 10/70
df56f7c
Sat Mar 12 11:51:23 HSP 2022: 
 exercises.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  1|6
total_score: 10/70
d09bcd3
Sat Mar 12 11:55:31 HSP 2022: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  2|5
total_score: 20/70
c86c7ef
Mon Mar 14 00:52:38 UTC 2022: 
 tests:  2|5
total_score: 20/70
e019da1
Mon Mar 14 00:59:56 UTC 2022: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘crearVector’:
exercises.c:84:3: error: unknown type name ‘vector’; did you mean ‘Vector’?
   vector *arreglo = NULL;
   ^~~~~~
   Vector
exercises.c:86:10: error: request for member ‘datos’ in something not a structure or union
   arreglo->datos = (int *) calloc (n, sizeof(int));
          ^~
exercises.c:90:10: error: request for member ‘capacidad’ in something not a structure or union
   arreglo->capacidad = n;
          ^~
exercises.c:92:10: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
   return arreglo;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
595f3dc
Mon Mar 14 01:00:29 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
47e3e60
Mon Mar 14 01:04:33 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
87fea40
Mon Mar 14 01:07:30 UTC 2022: 
 exercises.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
2226668
Mon Mar 14 01:11:24 UTC 2022: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:101:8: error: incompatible types when assigning to type ‘Vector {aka struct <anonymous>}’ from type ‘int’
   v[i] = valor;
        ^
Compilation failed
caac533
Mon Mar 14 01:17:40 UTC 2022: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:102:10: error: invalid type argument of ‘->’ (have ‘Vector {aka struct <anonymous>}’)
   arreglo->v[i] = valor;
          ^~
Compilation failed
b1c2447
Mon Mar 14 01:17:50 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:102:10: error: ‘Vector {aka struct <anonymous>}’ has no member named ‘v’
   arreglo.v[i] = valor;
          ^
exercises.c:100:10: error: variable ‘arreglo’ set but not used [-Werror=unused-but-set-variable]
   Vector arreglo;
          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e6e2e84
Mon Mar 14 01:18:23 UTC 2022: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:102:10: error: ‘Vector {aka struct <anonymous>}’ has no member named ‘v’
   arreglo->v[i] = valor;
          ^~
Compilation failed
e34ed71
Mon Mar 14 01:18:31 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:102:10: error: ‘arreglo’ is a pointer; did you mean to use ‘->’?
   arreglo.v[i] = valor;
          ^
          ->
exercises.c:100:11: error: variable ‘arreglo’ set but not used [-Werror=unused-but-set-variable]
   Vector *arreglo = malloc (sizeof(Vector));
           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
25041c4
Mon Mar 14 01:19:40 UTC 2022: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:100:11: error: ‘v’ redeclared as different kind of symbol
   Vector *v = malloc (sizeof(Vector));
           ^
exercises.c:99:28: note: previous definition of ‘v’ was here
 void asignarValor(Vector * v, int i, int valor) {
                            ^
exercises.c:102:8: error: incompatible types when assigning to type ‘Vector {aka struct <anonymous>}’ from type ‘int’
   v[i] = valor;
        ^
Compilation failed
85d54fa
Mon Mar 14 01:21:13 UTC 2022: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘asignarValor’:
exercises.c:101:6: error: ‘Vector {aka struct <anonymous>}’ has no member named ‘dato’; did you mean ‘datos’?
   v->dato[i] = valor;
      ^~~~
      datos
Compilation failed
a3263ca
Mon Mar 14 01:21:22 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
1fb4a3c
Mon Mar 14 01:24:45 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 40/70
5526f5e
Mon Mar 14 01:31:47 UTC 2022: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
7d6e1b9
Mon Mar 14 01:53:43 UTC 2022: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
exercises.c: In function ‘sumaV’:
exercises.c:127:9: error: ‘true’ undeclared (first use in this function); did you mean ‘trunc’?
   while(true){
         ^~~~
         trunc
exercises.c:127:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:129:11: error: ‘i’ undeclared (first use in this function)
     if (a[i] != NULL) n++;
           ^
exercises.c:125:18: error: unused variable ‘sumaB’ [-Werror=unused-variable]
   int sumaA = 0, sumaB = 0, n = 0;
                  ^~~~~
exercises.c:125:7: error: unused variable ‘sumaA’ [-Werror=unused-variable]
   int sumaA = 0, sumaB = 0, n = 0;
       ^~~~~
cc1: all warnings being treated as errors
Compilation failed
5009fd4
Mon Mar 14 01:53:58 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaV’:
exercises.c:127:9: error: ‘true’ undeclared (first use in this function); did you mean ‘trunc’?
   while(true){
         ^~~~
         trunc
exercises.c:127:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:129:11: error: ‘i’ undeclared (first use in this function)
     if (a[i] != NULL) n++;
           ^
Compilation failed
ad6e050
Mon Mar 14 01:56:38 UTC 2022: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaV’:
exercises.c:130:14: error: invalid operands to binary != (have ‘Vector {aka struct <anonymous>}’ and ‘void *’)
     if (a[i] != NULL) n++;
         ~~~~ ^~
Compilation failed
0496c31
Mon Mar 14 01:57:15 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaV’:
exercises.c:130:12: error: ‘Vector {aka struct <anonymous>}’ has no member named ‘dato’; did you mean ‘datos’?
     if (a->dato[n] != NULL) n++;
            ^~~~
            datos
Compilation failed
d121caf
Mon Mar 14 01:57:23 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function ‘sumaV’:
exercises.c:130:21: error: comparison between pointer and integer [-Werror]
     if (a->datos[n] != NULL) n++;
                     ^~
cc1: all warnings being treated as errors
Compilation failed
732c2bf
Mon Mar 14 02:17:00 UTC 2022: 
 exercises.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
 tests:  6|2
total_score: 50/70
4889053
Mon Mar 14 02:17:41 UTC 2022: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
a3460ad
